# books-bot

./: .env  README.md  main.py  pyproject.toml
app/controllers/: book_management.py  book_selection.py  progress.py  quiz.py  start.py  summary_book.py  summary_text.py  summary_view.py  teaching.py
app/database/: db_handler.py  init_db.py  migrations.py  models.py
app/models/: summary_model.py  user_model.py
app/services/: book_processor.py  llm_prompts.py  nlp_service.py  quiz_service.py  reminders_service.py  summarization_service.py  teaching_service.py
app/utils/: chunking.py  file_processing.py  logging_config.py  save_summary_to_db.py
constants/: constants.py
